<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpConfirmation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="54dp"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            android:text="@string/confirmation"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightGreyForText"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="33dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/otpSentMessage" />

        <TextView
            android:id="@+id/mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text=""
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/lightGreyForText"
            android:fontFamily="@font/roboto"
            android:text="@string/enterOtp" />

        <EditText
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint=""
            android:padding="16dp"
            android:id="@+id/enterOtp"
            android:textSize="15sp"
            android:background="@drawable/round_corners" />

        <Button
            android:id="@+id/proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/proceed_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/proceed" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>