<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Track It"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:fontFamily="@font/asul"
        android:layout_marginBottom="20dp"
        android:textSize="35sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/signInSignUp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/phoneNumber"
            android:textColor="@color/lightGreyForText" />

        <EditText
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint=""
            android:padding="16dp"
            android:id="@+id/enterPhoneNumber"
            android:textSize="15sp"
            android:background="@drawable/round_corners" />

        <Button
            android:id="@+id/proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/proceed_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/proceed" />


        <TextView
            android:id="@+id/tnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/lightGreyForText"
            android:layout_marginTop="14dp"
            android:text="@string/tnc" />


    </LinearLayout>

</LinearLayout>